--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Django>=3.2.0
-django-taggit>=3.0.0
-Markdown>=3.4.1
-psycopg2>=2.8.4
-psycopg2-binary>=2.8.4
-django-crispy-forms>=1.14.0
+celery>=5.2.7
 crispy-bootstrap5>=0.6
-django-simple_history>=3.1.1
-Pillow>=9.2.0
+Django>=4.0.5
+django-crispy-forms>=1.14.0
+django-filter>=22.1
+django-simple-history>=3.1.1
+django-taggit>=3.0.0
