--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ django-crispy-forms>=1.14.0
 django-filter>=22.1
 django-simple-history>=3.1.1
 django-taggit>=3.0.0
-Markdown==3.4.1
-Pillow==9.4.0
+flower>=1.2.0
+Markdown>=3.4.1
+Pillow>=9.4.0
+psycopg2>=2.9.5
 PyYAML>=6.0
