updated compose config

--- a/matman.env
+++ b/matman.env
@@ -1,8 +1,8 @@
 # Example of .env file for docker compose
 
-DB_NAME=matman
-DB_USER=matman
-DB_PASSWORD=CHANGEME
+POSTGRES_DB_NAME=matman
+POSTGRES_USER=matman
+POSTGRES_PASSWORD=CHANGEME
 TIME_ZONE=GMT
 CELERY_TIMEZONE='Europe/Berlin'
 SECRET_KEY=CHANGEME
