updated compose config

--- a/matman.env
+++ b/matman.env
@@ -16,3 +16,5 @@ EMAIL_HOST_USER=CHANGEME
 EMAIL_HOST_PASSWORD=CHANGEME
 CELERY_BROKER='redis://redis:6379/0'
 CELERY_BACKEND='redis://redis:6379/0'
+DJANGO_DISABLE_SECURITY=false
+DJANGO_DEBUG=false
