--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
   db:
     image: postgres
     restart: unless-stopped
+    volumes:
+      - ./db:/var/lib/postgresql/data/
     env_file:
       - matman.env
 
