fixed configuration for daphne and caddy

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,9 @@ files/static/
 */*/migrations/*
 !*/*/migrations/__init__.py
 db.sqlite3*
+
+# Folder used/created by docker compose
+/caddy/
+/db/
+/files/
+/site/
