--- a/compose/production/caddy/Caddyfile
+++ b/compose/production/caddy/Caddyfile
@@ -13,9 +13,9 @@
     }
     reverse_proxy @daphne daphne:8000
     file_server @static {
-        root PROJECTDIR/files/static/
+        root /srv/
     }
     file_server @media {
-        root PROJECTDIR/files/static/
+        root /srv/
     }
 }
