--- a/matman.env
+++ b/matman.env
@@ -3,17 +3,22 @@
 POSTGRES_DB_NAME=matman
 POSTGRES_USER=matman
 POSTGRES_PASSWORD=CHANGEME
+
 TIME_ZONE=GMT
+
 SECRET_KEY=CHANGEME
+
 ALLOW_REGISTRATION=true
 ALLOW_CHANGE_PASSWORD=true
 ALLOW_RESET_PASSWORD=true
+
 EMAIL_USE_TLS=true
 EMAIL_HOST=CHANGEME
 EMAIL_PORT=587
 EMAIL_HOST_USER=CHANGEME
 EMAIL_HOST_PASSWORD=CHANGEME
+
 CELERY_BROKER='redis://redis:6379/0'
 CELERY_BACKEND='redis://redis:6379/0'
-DJANGO_DISABLE_SECURITY=false
-DJANGO_DEBUG=false
+
+DJANGO_SETTINGS_MODULE=matman.settings.production
