cleaned up production settings

--- a/matman.env
+++ b/matman.env
@@ -1,5 +1,8 @@
 # Example of .env file for docker compose
 
+DJANGO_SETTINGS_MODULE=matman.settings.production
+
+POSTGRES_DB_HOST=db
 POSTGRES_DB_NAME=matman
 POSTGRES_USER=matman
 POSTGRES_PASSWORD=CHANGEME
@@ -20,5 +23,3 @@ EMAIL_HOST_PASSWORD=CHANGEME
 
 CELERY_BROKER='redis://redis:6379/0'
 CELERY_BACKEND='redis://redis:6379/0'
-
-DJANGO_SETTINGS_MODULE=matman.settings.production
