marked compose files and .env files as examples
This way, the actually used compose files and .env files won't be overwritten by git pull

Signed-off-by: slarag <58182961+Slarag@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,11 @@ db.sqlite3*
 /db/
 /files/
 /site/
+
+docker-compose*.yml
+!docker-compose-*example.yml
+
+compose/*/.env
+!compose/*/example.env
+
+matman/files
