--- a/docker-compose-development-example.yml
+++ b/docker-compose-development-example.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+env_file:
+
+
 services:
 
   db:
@@ -8,7 +11,7 @@ services:
     volumes:
       - ./db:/var/lib/postgresql/data/
     env_file:
-      - compose/development/.env
+      - compose/development/example.env
 
   redis:
     image: redis
@@ -24,7 +27,7 @@ services:
       - redis
       - db
     env_file:
-      - compose/development/.env
+      - compose/development/example.env
     volumes:
       - ./matman:/app
       - ./files/static:/files/static
@@ -44,7 +47,7 @@ services:
       - redis
       - db
     env_file:
-      - compose/development/.env
+      - compose/development/example.env
     volumes:
       - ./matman:/app
       - ./files/static:/files/static
@@ -60,7 +63,7 @@ services:
       - redis
       - db
     env_file:
-      - compose/development/.env
+      - compose/development/example.env
     volumes:
       - ./matman:/app
       - ./files/static:/files/static
@@ -76,7 +79,7 @@ services:
       - redis
       - db
     env_file:
-      - compose/development/.env
+      - compose/development/example.env
     volumes:
       - ./matman:/app
     ports:
