--- a/compose/production/example.env
+++ b/compose/production/example.env
@@ -23,3 +23,7 @@ EMAIL_HOST_PASSWORD=CHANGEME
 
 CELERY_BROKER='redis://redis:6379/0'
 CELERY_BACKEND='redis://redis:6379/0'
+
+CSRF_COOKIE_SECURE=True
+SESSION_COOKIE_SECURE=True
+SECURE_SSL_REDIRECT=True
